# agents-workshop

./: .gitignore  README.md  azure.yaml
agents-workshop/01-introduction-to-agentic-ai/: README.md
agents-workshop/02-single-agent-example/: README.md
agents-workshop/03-building-custom-tools/: README.md
agents-workshop/03-building-custom-tools/03.5.on-behalf-of/: .dockerignore  chat.py  pyproject.toml  utils.py
agents-workshop/03-building-custom-tools/03.5.on-behalf-of/logging_tools/: simple_log.py  streamlit_tool_log.py
agents-workshop/04-multi-agent-workflows/: README.md
agents-workshop/04-multi-agent-workflows/azure-ai-agents/: .env.example  README.md  agent.py  pyproject.toml
agents-workshop/05-wrap-up-and-next-steps/: README.md
data/: energy coeffient data.md
data/catalog/: greenhouse-gas-equivalencies-for-1000000kgCO2.md  sci.md
data/compute/: azure-embodied-coefficient.csv  azure-instances.csv  azure-use-coeffient-data.md
demo_app/: agent_chat_placeholder.py  chat.py  otel_setup.py  pyproject.toml  setup_agent.py  setup_intvect.py  setup_requirements.txt
gradio-app/: README.md  agent.py  agent_chat.py  app.py  main.py  otel_setup.py  weather_spec.json
gradio_app/: .env.example  .env.production  Dockerfile  README.md  agent.py  agent_chat.py  agent_factory.py  app.py  auth_msal.py  kernel_factory.py  main.py  otel_setup.py  pyproject.toml  requirements.txt  simple_tool.py  stack_overflow_tool.py  test.http
scripts/: add_app_reg_secret.ps1  add_app_reg_secret.sh  approve_pe.ps1  load_python_env.ps1  load_python_env.sh  setup_agents.ps1  setup_agents.sh  setup_intvect.ps1  setup_intvect.sh  setup_local.ps1  setup_local.sh
setup/: README.md  azd.py  pyproject.toml  setup_intvect.py
streamlit_app/: Dockerfile  chat.py  chat_with_agent_base.py  otel_setup.py  pyproject.toml
(+45 files in other folders)
